--- a/.editorconfig
+++ b/.editorconfig
@@ -69,7 +69,7 @@ indent_style = space
 indent_size = 2
 
 [Dockerfile*]
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 [package.json]
